src/main/java/org/example/java19_final9/errors/handler/UserNotFoundException.java
package org.example.java19_final9.errors.handler;

public class UserNotFoundException extends Exception {
    public UserNotFoundException() {
    }

    public UserNotFoundException(String message) {
        super(message);
    }
}
